# wealthfolio

./: .env.web.example  Cargo.toml  README.md  compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml
.github/workflows/: build-windows.yml
apps/frontend/: addon-sandbox.html  package.json
apps/frontend/src/: routes.tsx  use-global-event-listener.ts
apps/frontend/src/adapters/: adapter-command-parity.test.ts  types.ts
apps/frontend/src/addons/: activation-coordinator.test.ts  activation-coordinator.ts  addons-core.ts  addons-dev-mode.test.ts  addons-dev-mode.ts  addons-runtime-context.test.ts  addons-runtime-context.ts  contribution-registry.test.ts  contribution-registry.ts  type-bridge.test.ts  type-bridge.ts
apps/frontend/src/components/: action-palette.tsx  app-launcher.tsx  history-chart.tsx  holding-performance-percent.test.tsx  holding-performance-percent.tsx  language-selector.tsx  metric-display.tsx
apps/frontend/src/context/: auth-context.tsx
apps/frontend/src/lib/: activity-utils.test.ts  activity-utils.ts  constants.ts  holding-performance.test.ts  holding-performance.ts  performance.test.ts  performance.ts  query-invalidation.ts  query-keys.ts  types.ts
apps/server/: Cargo.toml  README.md
apps/server/src/: ai_environment.rs  api.rs  config.rs  events.rs  lib.rs  main.rs  main_lib.rs
apps/server/src/api/: activities.rs  addon_network.rs  addons.rs  agent_access.rs  assets.rs  device_sync.rs  health.rs  secrets.rs
apps/server/src/domain_events/: planner.rs  queue_worker.rs
apps/server/src/mcp/: audit_sink.rs  auth.rs  mod.rs
apps/server/tests/: agent_access.rs  income_summary_api.rs
apps/tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src/: events.rs  lib.rs  listeners.rs
apps/tauri/src/commands/: activity.rs  addon.rs  addon_network.rs  asset.rs  health.rs  mcp.rs  mod.rs  secrets.rs
apps/tauri/src/context/: ai_environment.rs  providers.rs  registry.rs
apps/tauri/src/domain_events/: planner.rs  queue_worker.rs
apps/tauri/src/mcp/: audit_sink.rs  lockfile.rs  middleware.rs  mod.rs  server.rs  tests.rs
crates/agent-tools/src/: catalog.rs  constants.rs  env.rs  scope.rs
crates/agent-tools/src/tools/: activity_import.rs  asset_classification.rs  commit_activity.rs  commit_asset_classification.rs  contribution_limits.rs  create_categorization_rule.rs  holdings.rs  mod.rs  net_worth.rs  portfolios.rs  propose_categories.rs  record_activities.rs  record_activity.rs
crates/ai/src/: types.rs
crates/ai/src/env/: test_env.rs
crates/ai/src/tools/: cash_balances.rs  performance.rs  valuation.rs
crates/ai/tests/snapshots/: tool_outputs_parity__output_get_performance.snap  tool_outputs_parity__output_get_performance_scoped.snap  tool_outputs_parity__output_list_categorization_context.snap  tool_outputs_parity__output_list_categorization_context_explicit_ids.snap  (+1 more)
crates/connect/src/broker/: mapping.rs  (+1 more)
crates/device-sync/src/: lib.rs  types.rs
crates/storage-sqlite/: Cargo.toml
crates/storage-sqlite/src/: lib.rs  lots.rs  schema.rs
crates/storage-sqlite/tests/: agent_repos.rs
crates/wealthfolio-mcp/: Cargo.toml
crates/wealthfolio-mcp/src/: audit.rs  handler.rs  lib.rs  pat.rs
crates/wealthfolio-mcp/tests/: http_roundtrip.rs
docs/addons/: addon-api-reference.md  addon-migration-guide-v3.5-to-v3.6.md  addon-platform-refactor-plan.md  rfc-addon-runtime-lifecycle.md
docs/architecture/: cli-mcp-agent-access.md
docs/features/: performance-semantics-design.md
docs/features/short-selling/: signed-option-shorts-design.md
e2e/: 01-happy-path.spec.ts  02-activities.spec.ts  03-fx-cash-balance.spec.ts  05-form-validation.spec.ts  08-holdings-and-performance.spec.ts  09-bulk-holdings.spec.ts  10-symbol-mapping-validation.spec.ts  11-stock-split.spec.ts  12-asset-backed-income-subtypes.spec.ts  14-stock-short-workflow.spec.ts  15-csv-import-currency-resolution.spec.ts  helpers.ts
e2e/fixtures/: cad-account-usd-symbol-import.csv
e2e/fixtures/quotes/: instruments.json
scripts/: prep-e2e.mjs
(+358 files in other folders)
